play-again for final page

--- a/final.html
+++ b/final.html
@@ -25,6 +25,7 @@
 
         <div id="playagain">
             <a href="intro.html">
+              <!-- href="intro.html" -->
               <button id="play-again" class="play">Play Again</button>
               
             </a>
